# fbc_curation

./: .gitignore  .travis.yml  .zenodo.json  DEPLOY.md  Dockerfile  MANIFEST.in  README.md  README.rst  README_package_release.md  README_site_deploy.md  README_site_develop.md  RELEASE.md  docker-compose-develop.yml  docker-compose-production.yml  docker-purge.sh  examples.py  fbc_curation.py  fcode.sh  privacy_notice.md  requirements.txt  setup.cfg  setup.py  test_fbc_curation.py  tox.ini
.github/workflows/: main.yml
benchmark/: .gitignore  README.md  Snakefile
benchmark/scripts/: analysis.py  run_fbc_curation.py  server-debug.sh
benchmark/scripts/templates/: analysis.html
docs/images/icon/: _FROG_logos.ai
docs_builder/: README.md  conf.py  examples.md  index.rst  introduction.rst  make_docs.sh  overview.md  overview.rst  reference_files.md  requirements-docs.txt  runfrog.md  schema.rst  usage.md
docs_builder/_build/html/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  overview.html  reference_files.html  search.html  searchindex.js  usage.html
docs_builder/_build/html/.doctrees/: environment.pickle  examples.doctree  index.doctree  overview.doctree  reference_files.doctree  usage.doctree
docs_builder/_build/html/_sources/: index.rst.txt  reference_files.md.txt  usage.md.txt
examples/results/: e_coli_core_01_objective.tsv  e_coli_core_02_fva.tsv  e_coli_core_03_gene_deletion.tsv  e_coli_core_04_reaction_deletion.tsv  iJR904_01_objective.tsv  iJR904_02_fva.tsv  iJR904_03_gene_deletion.tsv  iJR904_04_reaction_deletion.tsv
examples/results/e_coli_core/cameo/: 02_fva.tsv  03_gene_deletion.tsv  04_reaction_deletion.tsv  metadata.json
examples/results/e_coli_core/cobrapy/: 02_fva.tsv  03_gene_deletion.tsv  04_reaction_deletion.tsv  metadata.json
examples/results/iAB_AMO1410_SARS/cameo/: 01_objective.tsv  02_fva.tsv  04_reaction_deletion.tsv
examples/results/iAB_AMO1410_SARS/cobrapy/: 03_gene_deletion.tsv
examples/results/iJR904/cameo/: 04_reaction_deletion.tsv
examples/results/iJR904/cobrapy/: 02_fva.tsv  03_gene_deletion.tsv  04_reaction_deletion.tsv
fbc_curation/: __init__.py  _version.py  cameo_curator.py  cobrapy_curator.py  constants.py  curation.py  examples.py  fbc_curator.py  fbc_files.py
fbc_curation/curator/: __init__.py  cameo_curator.py  cobrapy_curator.py  curator.py  result.py  results.py
fbc_curation/examples/results/: e_coli_core_02_fva.tsv  e_coli_core_03_gene_deletion.tsv  e_coli_core_04_reaction_deletion.tsv  iJR904_02_fva.tsv  iJR904_03_gene_deletion.tsv  iJR904_04_reaction_deletion.tsv  ymn_01_objective.tsv
fbc_curation/examples/results/MODEL1709260000/: 01_objective.tsv  02_fva.tsv  03_gene_deletion.tsv  04_reaction_deletion.tsv
fbc_curation/examples/results/e_coli_core/: 01_objective.tsv  02_fva.tsv  03_gene_deletion.tsv  04_reaction_deletion.tsv
fbc_curation/examples/results/e_coli_core/cameo/: 02_fva.tsv
fbc_curation/examples/results/e_coli_core/cobrapy/: 01_objective.tsv
fbc_curation/examples/results/iJR904/: 01_objective.tsv  02_fva.tsv  03_gene_deletion.tsv  04_reaction_deletion.tsv
fbc_curation/tests/: test_curation.py  test_examples.py  test_fbc_curation.py  test_results.py
fbc_curation/tests/data/outputs/e_coli_core/cameo/: 04_reaction_deletion.tsv
frog-site/: .env.development  .env.production  Dockerfile-develop  README.md  privacy_notice.md
frog-site/src/components/layout/: About.vue  Examples.vue  FileUploadForm.vue  Frog.vue  Home.vue  Loading.vue  Navbar.vue  OMEXTree.vue  Report.vue  TablesContainer.vue  TaskQueue.vue  URLUpload.vue
frog-site/src/components/tables/: ObjectiveTable.vue
frog-site/src/router/: index.ts
frog-site/src/store/: index.ts
nginx/: runfrog.de
nginx/config/conf.d/: local.conf
release-notes/: 0.1.0.md  0.1.2.md  0.1.3.md  0.1.4.md  0.1.5.md  0.1.6.md  0.1.7.md  0.2.0.md  0.2.1.md  0.2.2.md  0.2.3.md
results/: e_coli_core_01_objective.tsv  e_coli_core_02_fva.tsv  e_coli_core_03_gene_deletion.tsv  e_coli_core_04_reaction_deletion.tsv  iJR904_01_objective.tsv  iJR904_02_fva.tsv  iJR904_03_gene_deletion.tsv  iJR904_04_reaction_deletion.tsv
runfrog-site/: .gitignore  Dockerfile-develop  Dockerfile-production  package.json  privacy_notice.md  vue.config.js
runfrog-site/public/: about.txt  index.html
runfrog-site/src/components/layout/: About.vue  Examples.vue  Home.vue  Navbar.vue
schema/: frog-schema-version-1.json
src/fbc_curation/: __init__.py  api.py  compare.py  constants.py  curation.py  datamodel.py  examples.py  frog-schema-version1.json  frog.py  metadata.py  oven.py  results.py  runfrog.py  schema.py  worker.py
src/fbc_curation/curator/: __init__.py  cameo_curator.py  cobrapy_curator.py  curator.py  metadata.py  results.py
src/fbc_curation/examples/results/e_coli_core/cameo/: metadata.json
src/fbc_curation/resources/: read_omex.py
src/fbc_curation/resources/examples/frogs/: e_coli_core_FROG.omex  e_coli_core_FROG.xml  e_coli_core_no_genes_FROG.omex  e_coli_core_no_genes_FROG.xml  iAB_AMO1410_SARS-CoV-2_FROG.omex  iCGB21FR_FROG.omex  iJR904_FROG.omex  iJR904_FROG.xml  iJR904_omex_FROG.omex
src/fbc_curation/resources/examples/models/: LICENSE  create_omex.py  e_coli_core.omex  e_coli_core_FROG.omex  e_coli_core_no_genes.xml  e_coli_core_omex_FROG.omex  example_docs.py  iAB_AMO1410_SARS-CoV-2.omex  iCGB21FR.omex  iJR904.omex
src/fbc_curation/resources/examples/results/: e_coli_core.omex
src/fbc_curation/resources/omex/: Raman2006_MAP_v2.omex
src/fbc_curation/resources/schema/: frog-schema-version-1.json
src/fbc_curation/scripts/: runfrogs.py
src/fbc_curation/test/: test_api.py  test_curation.py  test_examples.py  test_metadata.py  test_results.py
src/fbc_curation/tests/: test_curation.py  test_examples.py  test_results.py
src/tests/: __init__.py  test_curation.py  test_metadata.py  test_results.py
tests/: conftest.py  test_api.py  test_curation.py  test_examples.py  test_metadata.py  test_report.py  test_results.py  test_runfrog.py  test_worker.py
tests/data/outputs/e_coli_core/cameo/: 03_gene_deletion.tsv
(+21 files in other folders)
