[bumpversion]
current_version = 0.1.6
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize =
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = fbc_curation
url = https://github.com/matthiaskoenig/fbc_curation
download_url = https://pypi.org/project/fbc-curation
project_urls =
	Source Code = https://github.com/matthiaskoenig/fbc_curation
	Documentation = https://github.com/matthiaskoenig/fbc_curation
	Bug Tracker = https://github.com/matthiaskoenig/fbc_curation/issues
author = Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-3.0
description = FBC reference files for SBML model curation.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	modeling
	reproducibility
	SBML
	fbc

[options]
zip_safe = True
python_requires = >=3.7
install_requires =
	pymetadata>=0.2.6
    pandas>=1.0.5
	cobra==0.22.1
	cameo==0.13.5
    # cameo @ git+https://github.com/biosustain/cameo/@15803171d18b9723860d7bda29fd4d81b12e6e40#egg=cameo
    fastapi>=0.68.2
	uvicorn>=0.14.0
	python-multipart>=0.0.5
    celery>5
    flower>=1.0.0
    redis>=3.5.3
    orjson>=3.6.4

    # for celery
    click<8
    # for cameo -> escher
    jinja2<3

	numpy
    rich
    pydantic


tests_require =
	tox
packages = find:
package_dir =
	= src
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	runfrog_examples = fbc_curation.examples:run_examples
	runfrog = fbc_curation.runfrog:main

[options.extras_require]
development =
	black
	bump2version
	isort
	tox
	pytest>=6.1
	pytest-cov>=2.8.1

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values =
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/fbc_curation/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
